--- a/.github/workflows/ARMv8-N1.yml
+++ b/.github/workflows/ARMv8-N1.yml
@@ -155,12 +155,14 @@ jobs:
         tar -zcf Packages.tar.gz packages
         rm -rf packages feeds.buildinfo version.buildinfo
         echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
+        echo "FIRMWARE_NAME=$(SOURCE_REPO)-firmware-$(DEVICE_TARGET)-$(DEVICE_SUBTARGET)-$(FILE_DATE)" >> $GITHUB_ENV
+        echo "FIRMWARE_NAME=$(FIRMWARE_NAME)" >> $GITHUB_OUTPUT
 
     - name: Upload Firmware To Artifact
       if: steps.generate.outputs.status == 'success' && env.FIRMWARE_RELEASE != 'true'
       uses: actions/upload-artifact@main
       with:
-        name: ${{ env.SOURCE_REPO }}-firmware-${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-${{ env.FILE_DATE }}
+        name: ${{ env.FIRMWARE_NAME }}
         path: ${{ env.FIRMWARE_PATH }}
 
     - name: Upload Firmware To Release
@@ -185,6 +187,8 @@ jobs:
 
     env:
       VERSION_INFO: ${{ needs.Build.outputs.VERSION_INFO }}
+      FIRMWARE_NAME: ${{ needs.Build.outputs.FIRMWARE_NAME }}
+      AUTHOR: Yztz
 
     steps:
     - name: Checkout
@@ -215,7 +219,7 @@ jobs:
     - name: Download Armvirt Firmware
       uses: actions/download-artifact@v2.1.1
       with:
-        name: ${{ env.SOURCE_REPO }}-firmware-${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-${{ env.FILE_DATE }}
+        name: ${{ env.FIRMWARE_NAME }}
         path: openwrt-armvirt
 
     - name: Package OpenWrt Firmware
@@ -224,10 +228,10 @@ jobs:
       env:
         OPENWRT_ARMVIRT: openwrt-armvirt/*rootfs.tar.gz
         PACKAGE_SOC: s905d
-        WHOAMI: Yztz
+        WHOAMI: ${{ env.AUTHOR }}
         KERNEL_VERSION_NAME: 5.15.13_6.1.5
         KERNEL_AUTO_LATEST: true
-        DISTRIB_REVISION: R${{ env.DATE1 }} by Yztz
+        DISTRIB_REVISION: R${{ env.DATE1 }} by ${{ env.AUTHOR }}
 
     - name: Upload OpenWrt To Artifact
       if: env.PACKAGED_STATUS == 'success' && env.OPENWRT_RELEASE != 'true'
