--- a/.github/workflows/ARMv8-N1.yml
+++ b/.github/workflows/ARMv8-N1.yml
@@ -201,7 +201,6 @@ jobs:
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
-        [ -d openwrt-armvirt ] || mkdir -p openwrt-armvirt
         echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "DATE1=$(date +"%y.%m.%d")" >> $GITHUB_ENV
 
@@ -223,7 +222,7 @@ jobs:
       # if: steps.download.outputs.status == 'success'
       uses: unifreq/openwrt_packit@master
       env:
-        OPENWRT_ARMVIRT: firmware/*rootfs.tar.gz
+        OPENWRT_ARMVIRT: ./*rootfs.tar.gz
         PACKAGE_SOC: s905d
         WHOAMI: ${{ env.AUTHOR }}
         KERNEL_VERSION_NAME: 5.15.13_6.1.5
