--- a/configs/extra.config
+++ b/configs/extra.config
@@ -183,7 +183,7 @@ CONFIG_PACKAGE_luci-app-cpufreq=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
-CONFIG_PACKAGE_luci-app-dockerman=y
+# CONFIG_PACKAGE_luci-app-dockerman=y
 # CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-filebrowser=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
@@ -286,7 +286,7 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 # CONFIG_PACKAGE_luci-app-vsftpd=y
 # CONFIG_PACKAGE_luci-app-vssr=y
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=y
-# CONFIG_PACKAGE_luci-app-watchcat is not set
+CONFIG_PACKAGE_luci-app-watchcat=y
 # CONFIG_PACKAGE_luci-app-webadmin is not set
 # CONFIG_PACKAGE_luci-app-wifischedule is not set
 CONFIG_PACKAGE_luci-app-wireguard=y
@@ -297,12 +297,12 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 
 # Themes
 CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-theme-atmaterial=y
-CONFIG_PACKAGE_luci-theme-edge=y
-CONFIG_PACKAGE_luci-theme-infinityfreedom=y
-CONFIG_PACKAGE_luci-theme-design=y
-CONFIG_PACKAGE_luci-theme-netgear=y
-CONFIG_PACKAGE_luci-theme-opentomcat=y
+# CONFIG_PACKAGE_luci-theme-atmaterial=y
+# CONFIG_PACKAGE_luci-theme-edge=y
+# CONFIG_PACKAGE_luci-theme-infinityfreedom=y
+# CONFIG_PACKAGE_luci-theme-design=y
+# CONFIG_PACKAGE_luci-theme-netgear=y
+# CONFIG_PACKAGE_luci-theme-opentomcat=y
 
 # 3G/4G Support
 CONFIG_PACKAGE_comgt-ncm=y
@@ -325,7 +325,7 @@ CONFIG_PACKAGE_python-pip-conf=y
 CONFIG_PACKAGE_python3=y
 
 # Software
-CONFIG_PACKAGE_ariang=y
+# CONFIG_PACKAGE_ariang=y
 CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_autosamba=y
 CONFIG_PACKAGE_bsdtar=y
@@ -336,7 +336,7 @@ CONFIG_PACKAGE_bsdtar=y
 # CONFIG_PACKAGE_ddns-scripts_nsupdate=y
 # CONFIG_PACKAGE_ddns-scripts_route53-v1=y
 CONFIG_PACKAGE_diffutils=y
-CONFIG_PACKAGE_docker-compose=y
+# CONFIG_PACKAGE_docker-compose=y
 CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_f2fs-tools=y
 CONFIG_PACKAGE_f2fsck=y
@@ -369,8 +369,8 @@ CONFIG_PACKAGE_kmod-shortcut-fe=y
 CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
 
 # Ipv6 Support
-# CONFIG_PACKAGE_6in4=y
-# CONFIG_PACKAGE_ipv6helper=y
-# CONFIG_PACKAGE_ip6tables=y
-# CONFIG_PACKAGE_ip6tables-extra=y
-# CONFIG_PACKAGE_ip6tables-mod-nat=y
+CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_ip6tables-extra=y
+CONFIG_PACKAGE_ip6tables-mod-nat=y
