--- a/.github/workflows/ARMv8-N1.yml
+++ b/.github/workflows/ARMv8-N1.yml
@@ -10,8 +10,8 @@ name: ARMv8 N1 OpenWrt
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: 0 22 * * *
+  # schedule:
+  #   - cron: 0 22 * * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
