--- a/.github/workflows/RaspberryPi4-OpenWrt.yml
+++ b/.github/workflows/RaspberryPi4-OpenWrt.yml
@@ -334,7 +334,7 @@ jobs:
       uses: actions/upload-artifact@main
       with:
         name: ${{ env.SOURCE_REPO }}-firmware-${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-${{ env.FILE_DATE }}
-        path: ${{ env.FIRMWARE_PATH }}
+        path: ${{ env.FIRMWARE_PATH }}/*
 
     - name: Upload Firmware To Release
       if: steps.generate.outputs.status == 'success' && env.FIRMWARE_RELEASE == 'true'
