--- a/.github/workflows/RaspberryPi4-OpenWrt.yml
+++ b/.github/workflows/RaspberryPi4-OpenWrt.yml
@@ -10,8 +10,8 @@ name: RaspberryPi4 OpenWrt
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: 0 17 * * *
+  schedule:
+    - cron: 0 0 */3 * *
 
 env:
   SOURCE_URL: https://github.com/coolsnowwolf/lede
